added validation, persistance for teacher, teacher API, initial data in db at start

--- a/catalog/src/main/resources/application.yml
+++ b/catalog/src/main/resources/application.yml
@@ -21,3 +21,4 @@ spring:
       path: /h2-console-catalog  # http://localhost:8888/catalog/h2-console-catalog
 
 test.value: Spring
+insert.start.data: true
